# vector-search-service-demo

./: .env  .gitignore  Cargo.toml  Genesis.md  README.md  add_doc.sh  add_tip.sh  add_tip_log.txt  add_tip_log_2.txt  open_qdrant_ui.sh  query_tip.sh  run.sh  server_log_20250217.txt  start_qdrant.sh
src/: embedding.rs  embedding_model_factory.rs  main.rs  qdrant_util.rs  splitter.rs  thread_safty.rs  tokenizer_factory.rs  vector_mean.rs
src/all_minilm_l6_v2/: mod.rs
src/all_minilm_l6_v2/models/: README.txt
